[package]
name = "is_square_free"
version = "0.1.0"
authors = ["Oliver Anderson <oliver.anderson@oxid-esales.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-sqrt = "0.1.5"
num_cpus = "1.13.0"
rug = "1.12.0" 
 